<resources>
    <string name="app_name">nullAPP</string>
    <string name="label_comprar">Compras</string>
    <string name="label_vender">Vendas</string>
    <string name="label_editar">Editar</string>
    <string name="label_sacola">Sacola</string>
    <string name="vender">Vender</string>
    <string name="todo">TODO</string>
    <string name="comprar">Comprar</string>
    <string name="textview">TextView</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="telefone">Telefone</string>
    <string name="email">e-mail</string>
    <string name="senha">Senha</string>
    <string name="confirmasenha">Confirmação da Senha</string>
    <string name="label_cadastracliente">Cadastro</string>
    <string name="login">  Login  </string>
    <string name="title_activity_editar_produtos">editarProdutos</string>
    <string name="nomecartao">  Nome do Cartão  </string>
    <string name="datacartao">  Data ( MM/AA )  </string>
    <string name="codigocartao">  Código do Cartão  </string>
    <string name="numerocartao">  nº Cartão  </string>
    <string name="finalizarcompra"> Finalizar Compra </string>
    <string name="confirmarproduto">  Confirmar Produto  </string>
    <string name="excluirproduto">  Excluir Produto  </string>
    <string name="nomeproduto">  Nome do Produto  </string>
    <string name="quantidade">  Quantidade  </string>
    <string name="precoproduto">  Preço do Produto  </string>

</resources>
